# code-edith

./: .gitignore  CodeFile  README.md  index.py  pyproject.toml  requirements.txt
.old/: README.md
