[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-edith"
version = "1.0.2"
description = "CLI Based Privacy Focused Local/Cloud AI Agent"
authors = [
    { name="Anthroberc Inc." }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs==9.10.0",
    "openai==2.24.0",
    "python-dotenv==1.2.1",
    "rich==14.3.3"
]

[project.scripts]
code-edith = "index:main"

[tool.setuptools]
py-modules = ["index"]
packages = ["bin", "bin.helper", "bin.tool"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt"]
